--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<title>Document</title>
 </head>
 <style>
+	svg {
+		max-width: 1100px;
+		margin: 0 auto;
+		display: block;
+	}
 	path {
 		stroke: #fc0;
 		stroke-width: 6px;
@@ -18,20 +23,20 @@
 		font-size: 14px;
 	}
 	circle {
-		fill: rgba(255,255,255,0.7);
+		/*fill: rgba(255,255,255,0.7);*/
 	}
 </style>
 <body>
 <div id="btnSave">Скaчать</div>
 <div id="svgContainer">
-	<svg id="svg" viewBox="0 0 3000 3000" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 style="enable-background:new 0 0 3000 3000;" xml:space="preserve">
+	<svg id="svg" viewBox="0 0 3000 3000" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve">
 	 <circle id="circle" stroke="#1D1D1B" stroke-width="3" stroke-miterlimit="10" cx="0" cy="0" r="10"></circle>
 	</svg>
 </div>
 </body>
 <!-- <script src="dev5-28251396-pristavnie.js"></script> -->
 <!-- <script src="dev5-28251396.js"></script> -->
+<!-- <script src="prod-32040551-iowa.js"></script> -->
 <script src="model.js"></script>
 
 <script src="scripts.v2.js"></script>
