try to divide subpaths

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 	</svg>
 </div>
 </body>
-<!-- <script src="dev5-28251396-pristavnie.js"></script> -->
+<script src="dev5-28251396-pristavnie.js"></script>
 <!-- <script src="dev5-28251396.js"></script> -->
 <!-- <script src="prod-32040551-iowa.js"></script> -->
-<script src="model.js"></script>
+<!-- <script src="model.js"></script> -->
 
 <script src="scripts.v2.js"></script>
 </html>
