--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 </div>
 </body>
 <!-- <script src="dev5-28251396-pristavnie.js"></script> -->
-<script src="dev5-28251396-pristavnie-parter.js"></script>
+<!-- script src="dev5-28251396-pristavnie-parter.js"></script> -->
+<script src="prod-32540971.js"></script>
 <!-- <script src="dev5-28251396.js"></script> -->
 <!-- <script src="prod-32040551-iowa.js"></script>-->
 <!-- <script src="model.js"></script> -->
